# mcp_multi_client_server_demo

./: .env.dist  .gitignore  CLAUDE.md  MULTI_SERVER_USAGE.md  README.md  TODO.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml  pytest.ini  run_tests.sh  test_calculator.py  web_server.py
core/: README.md  chat.py  claude.py  cli.py  cli_chat.py  server_config.py  tools.py
docs/: anthropic_mcp_course_notes.md  mcp-education-slides.html  mcp-education-slides.md
mcp_clients/: README.md  mcp_client_console.py  mcp_client_http.py
mcp_servers/: README.md  calculator_mcp_server.py  documents_mcp_server.py
tests/: README.md
tests/unit/core/: test_claude.py  test_tools.py
web/: README.md  index.html  script.js
